--- a/components.css
+++ b/components.css
@@ -1,5 +1,72 @@
-/* 
-* ULOGO
+/*
+* SIDE NAVIGATION
+*/
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+}
+
+.side-nav__item {
+  position: relative;
+}
+
+.side-nav__item:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.side-nav__item::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background-color: var(--color-primary);
+  transform: scaleY(0);
+  transition: transform 0.2s, width 0.4s ease-in 0.2s, background-color 0.1s;
+  /* transform-origin: bottom; */
+}
+
+.side-nav__item:hover::before,
+.side-nav__link--active::before {
+  transform: scaleY(1);
+  width: 100%;
+}
+
+.side-nav__item:active::before {
+  background-color: var(--color-primary-light);
+}
+
+.side-nav__link:link,
+.side-nav__link:visited {
+  color: var(--color-grey-light-1);
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+  padding: 1.5rem 3rem;
+  display: flex;
+  align-items: center;
+  z-index: 10;
+  position: relative;
+}
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem;
+  margin-right: 2rem;
+  fill: currentColor;
+}
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
+}
+
+/*
+* LOGO
 */
 .logo {
   height: 4rem;
@@ -13,7 +80,7 @@
   }
 }
 
-/* 
+/*
 * SEARCH
 */
 .search {
@@ -70,7 +137,7 @@
   fill: var(--color-grey-dark-3);
 }
 
-/* 
+/*
 * USER NAV
 */
 .user-nav {
