--- a/layout.css
+++ b/layout.css
@@ -8,7 +8,7 @@
 .header {
   background-color: #fff;
   height: 7rem;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +21,9 @@
 }
 
 .sidebar {
-  background-color: var(--color-grey-dark-1);
+  /* background-color: var(--color-grey-dark-1); */
+  background-color: #fff;
+
   flex: 0 0 20%;
   display: flex;
   flex-direction: column;
@@ -29,7 +31,7 @@
 }
 
 .hotel-view {
-  background-color: orangered;
   flex: 1;
   height: 80rem;
+  background-color: #fff;
 }
