--- a/base.css
+++ b/base.css
@@ -31,6 +31,9 @@
   --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+
+  --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
