--- a/layout.css
+++ b/layout.css
@@ -21,8 +21,9 @@
 }
 
 .sidebar {
-  /* background-color: var(--color-grey-dark-1); */
-  background-color: #fff;
+  background-color: var(--color-grey-dark-1);
+  /* background-color: var(--color-primary); */
+  /* background-color: #000; */
 
   flex: 0 0 20%;
   display: flex;
@@ -32,6 +33,31 @@
 
 .hotel-view {
   flex: 1;
-  height: 80rem;
   background-color: #fff;
+}
+
+.detail {
+  font-size: 1.4rem;
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  /* align-self: baseline; */
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-reviews {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
