--- a/base.css
+++ b/base.css
@@ -52,6 +52,12 @@ html {
   font-size: 62.5%;
 }
 
+@media only screen and (max-width: 1100px) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Work Sans', sans-serif;
   font-weight: 400;
