--- a/components.css
+++ b/components.css
@@ -7,12 +7,31 @@
   margin-top: 3.5rem;
 }
 
+@media only screen and (max-width: 900px) {
+  .side-nav {
+    display: flex;
+    margin: 0;
+  }
+}
+
 .side-nav__item {
   position: relative;
 }
 
+@media only screen and (max-width: 900px) {
+  .side-nav__item {
+    flex: 1;
+  }
+}
+
 .side-nav__item:not(:last-child) {
   margin-bottom: 0.5rem;
+}
+
+@media only screen and (max-width: 900px) {
+  .side-nav__item:not(:last-child) {
+    margin-bottom: 0rem;
+  }
 }
 
 .side-nav__item::before {
@@ -53,12 +72,36 @@
   transition: color 1s;
   color: #ffffff;
 }
+@media only screen and (max-width: 900px) {
+  .side-nav__link:link,
+  .side-nav__link:visited {
+    justify-content: center;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .side-nav__link:link,
+  .side-nav__link:visited {
+    flex-direction: column;
+    padding: 1.5rem 0.5rem;
+  }
+}
 
 .side-nav__icon {
   width: 1.75rem;
   height: 1.75rem;
   margin-right: 2rem;
   fill: currentColor;
+}
+
+@media only screen and (max-width: 600px) {
+  .side-nav__icon {
+    margin-right: 0;
+    margin-bottom: 0.7rem;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
 
 .legal {
@@ -68,6 +111,11 @@
   padding: 2.5rem;
 }
 
+@media only screen and (max-width: 900px) {
+  .legal {
+    display: none;
+  }
+}
 /*
 * LOGO
 */
@@ -92,6 +140,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (max-width: 500px) {
+  .search {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
 }
 
 .search__input {
@@ -230,6 +286,13 @@
   padding: 1.5rem 3rem;
 }
 
+@media only screen and (max-width: 600px) {
+  .overview__heading {
+    font-size: 1.8rem;
+    padding: 1.25rem 2rem;
+  }
+}
+
 .overview__stars {
   margin-right: auto;
   display: flex;
@@ -266,15 +329,34 @@
   justify-content: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .overview__rating {
+    padding: 0 1.5rem;
+  }
+}
+
 .overview__rating-average {
   font-size: 2.25rem;
   font-weight: 300;
+  /* margin-bottom: -3px; */
+}
+
+@media only screen and (max-width: 600px) {
+  .overview__rating-average {
+    font-size: 1.8rem;
+  }
 }
 
 .overview__rating-count {
   font-size: 0.8rem;
   text-transform: uppercase;
   margin-bottom: -3px;
+}
+
+@media only screen and (max-width: 600px) {
+  .overview__rating-count {
+    font-size: 0.5rem;
+  }
 }
 
 .btn-inline {
@@ -367,6 +449,7 @@
   color: var(--color-grey-dark-3);
   display: flex;
   align-items: center;
+  margin-top: auto;
 }
 
 .recommend__count {
@@ -374,6 +457,7 @@
 }
 
 .recommend__friends {
+  display: flex;
 }
 
 .recommend__photo {
@@ -386,7 +470,7 @@
 }
 
 .recommend__photo:not(:last-child) {
-  margin-right: -1.5rem;
+  margin-right: -2rem;
 }
 
 /*
@@ -400,6 +484,13 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+}
+
+@media only screen and (max-width: 900px) {
+  .review {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 }
 
 .review::before {
@@ -462,6 +553,12 @@
   text-align: center;
 }
 
+@media only screen and (max-width: 900px) {
+  .cta {
+    padding: 2.5rem 0;
+  }
+}
+
 .cta__book-now {
   font-size: 2rem;
   font-weight: 300;
@@ -483,32 +580,44 @@
   );
   position: relative;
   overflow: hidden;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-image: linear-gradient(
+    to left,
+    var(--color-light),
+    var(--color-dark)
+  );
+}
+
+.btn:focus {
+  outline: none;
+  animation: pulse 1s infinite;
+}
+
+.btn > * {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  transition: all 0.2s;
 }
 
 .btn-visible {
-  display: inline-block;
   padding: 2rem 7.5rem;
 }
 
 .btn-invisible {
-  display: inline-block;
-  padding: 2rem 0;
   position: absolute;
-  height: 100%;
-  width: 100%;
+  padding: 2rem 0rem;
   top: -100%;
   left: 0;
 }
 
-.btn:hover,
-.btn__visible,
-.btn__invisible {
-  top: 0;
+.btn:hover .btn-visible {
+  transform: translateY(100%);
 }
 
-/* .btn__visible {
-} */
-
-/* .btn__invisible:hover {
+.btn:hover .btn-invisible {
   top: 0;
-} */
+}
